kubernetes/media/sonarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr-develop:4.0.6@sha256:bc7a8d9124a14562644a21a4209e3ac9424c9787ae179f39da83549d23a6d430
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - name: samba-config
              mountPath: /config
            - name: sonarr-service
              mountPath: /downloads
      volumes:
        - name: samba-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-service
          persistentVolumeClaim:
            claimName: samba-pvc
