kubernetes/media/sonarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
